--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/MagicMan88/liri-node-app/issues"
   },
-  "homepage": "https://github.com/MagicMan88/liri-node-app#readme"
+  "homepage": "https://github.com/MagicMan88/liri-node-app#readme",
+  "dependencies": {
+    "dotenv": "^8.2.0"
+  },
+  "devDependencies": {}
 }
