--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/MagicMan88/liri-node-app#readme",
   "dependencies": {
-    "dotenv": "^8.2.0"
+    "axios": "^0.19.0",
+    "dotenv": "^8.2.0",
+    "fs": "0.0.1-security"
   },
   "devDependencies": {}
 }
